--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@
   @apply bg-purple-900;
 }
 
+.input-basic {
+  @apply m-3 bg-black text-2xl text-center
+}
+
 /* body {
   margin: 0;
   display: flex;
